# Crawler

./: CMakeLists.txt  LICENSE  README.md
include/: Downloader.h  Parser.h  RootCertificates.h  Utils.h
sources/: Downloader.cpp  Parser.cpp  Utils.cpp  main.cpp
